k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-deployment
  labels:
    app: template
spec:
  replicas: 2
  selector:
    matchLabels:
      app: template
  template:
    metadata:
      labels:
        app: template
    spec:
      containers:
        - name: template
          image: me/template:latest
          ports:
            - containerPort: 80

      imagePullSecrets:
        - name: regcred
