k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: template-service
  labels:
    app: template
spec:
  selector:
    app: template
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
